# MLFloodEarlyWarningSystem

./: .gitignore  README.md  karachi_ml_flood_detection (1).py  pyproject.toml
backend/: .cache.sqlite  .cache.sqlite-journal  .env.example  render.yaml  requirements.txt  schema.sql
backend/app/: config.py  main.py
backend/app/data/: training_data.json
backend/app/models/: flood_model.py  schemas.py
backend/app/routers/: demo.py  model_info.py  predict.py  weather.py
backend/app/services/: database_service.py  ingestion_service.py  prediction_service.py  scheduler.py  weather_service.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/dashboard/: DemoControls.tsx  HeroAlert.tsx  KarachiMap.tsx  ModelInfo.tsx  PredictionChart.tsx  WeatherCharts.tsx  WeatherGauges.tsx
frontend/hooks/: useDemoMode.ts  useFloodData.ts
frontend/lib/: api.ts  constants.ts  types.ts
